--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,29 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+
+
+
+.header {
+  Background: #ffbbd0;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  height: 10vh;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.filter {
+  padding-top: 12vh;
+
+}
+
+.products {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  margin: 5%;
+  height: 5vh;
 }
