--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,6 @@
   text-align: center;
 }
 
-
-
-
 .header {
   Background: #ffbbd0;
   text-align: center;
@@ -16,15 +13,25 @@
 
 .filter {
   padding-top: 12vh;
-
+  position: center;
+  display: flex;
+  flex-direction: row;
 }
 
 .products {
+  position: center;
   display: flex;
   flex-direction: row;
+  width: 35vw;
 }
 
 button {
   margin: 5%;
   height: 5vh;
+}
+
+.cart {
+  /* padding-top: 12vh; */
+  position: center;
+
 }
